# video-transcription-batch

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  Dockerfile  PRD.md  PepperGeek_videos.json  QWEN.md  README.md  config.example.json  env-template  post-setup.sh  pyproject.toml  requirements.txt  yt-channel.py
.devcontainer/: devcontainer.json
.qwen/: settings.json
config/: tasks.example.json
deploy/: build.yaml  history.md
docker/: Dockerfile  requirements.txt
docker/app/: main.py
scripts/: 54b85ec3-35eb-4bc0-885a-60597c99cd82.json  __init__.py  batch_transcribe.py  generate_nomad_job.py  setup-vault-policies.sh  yt-channel.py
transcription_client/: __init__.py  client.py  models.py  s3_batch.py  utils.py
