[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "video-transcription-client"
version = "0.1.0"
description = "Python client for video transcription services running in Nomad clusters"
authors = [{name = "Gerald", email = "gerald@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0", 
    "boto3>=1.20.0",
    "google-api-python-client>=2.0.0",
    "tqdm>=4.60.0",
    "python-nomad>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.910",
]

[project.scripts]
batch-transcribe = "scripts.batch_transcribe:main"
generate-nomad-job = "scripts.generate_nomad_job:main"
transcription-yt-channel = "scripts.yt_channel:main"

[project.urls]
Homepage = "https://github.com/geraldthewes/video-transcription-batch"
Repository = "https://github.com/geraldthewes/video-transcription-batch"

[tool.setuptools.packages.find]
where = ["."]
include = ["transcription_client*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true